--- a/frontend/templates/index.html
+++ b/frontend/templates/index.html
@@ -22,6 +22,22 @@
             <input type="text" id="post-content" placeholder="Enter Post Content">
             <button onclick="addPost()">Add Post</button>
         </div>
+
+        <div class="input-field">
+            <label for="sorting-key">Sort by:</label>
+            <div class="select">
+                <select name="key" id="sorting-key">
+                    <option value="" disabled selected>Select your option</option>
+                    <option value="title">Title</option>
+                    <option value="author">Author</option>
+                    <option value="content">Content</option>
+                    <option value="date_created">Date</option>
+                </select>
+            </div>
+            <button onclick="sortPosts()">Sort Posts</button>
+
+        </div>
+
         <div id="post-container">
             <!-- Blog posts will be inserted here by JavaScript -->
         </div>
